# media-python

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  mypy.ini  pyproject.toml  requirements.txt  server.py
app/: article_crud.py  auth.py  database.py  graph_schemas.py  main.py  models.py  schemas.py  setup.py  user_crud.py
app/migrations/: env.py
app/migrations/versions/: 49290dc57ed4_initial.py  7c8cb10329d0_update_fix.py  a4b2f15cf1f0_init.py  adab90be4d9a_add_refresh_token.py  cc4da6ab784f_update_fix.py  cd819d01d6f6_update_fix.py
docker/mysql/: Dockerfile  my.cnf
docker/mysql/db/: init.sql
docker/nginx/: default.conf  nginx.conf
pb/: entity_admin_user_pb2.py  entity_admin_user_twirp.py  entity_article_pb2.py  entity_article_twirp.py  entity_common_pb2.py  entity_common_twirp.py  service_admin_user_pb2.py  service_admin_user_twirp.py  service_article_pb2.py  service_article_twirp.py
proto/: entity_article.proto  entity_common.proto  service_admin_user.proto  service_article.proto
scripts/: gen_server.sh  migrate.sh
